--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -1,6 +1,163 @@
 {
     "welcome": "Wilkommen zu",
     "required": "* Pflichtfeld",
-    "password": "passwort"
+    "email": "email",
+    "validMail": "Bitte gib eine zulässige Email Adresse ein",
+    "password": "passwort",
+    "passwordMin": "Passwort muss mindestens 6 Zeichen lang sein",
+    "passwordMax": "Passwort kann nicht länger als 30 Zeichen lang sein",
+    "login": "einloggen",
+    "forgotPassword": "Passwort vergessen?",
+    "noAccount": "Kein Account? ",
+    "registerHere": "Registriere dich hier",
+    "invalidMail": "Unzulässsige Email Adresse",
+    "noUserWithMail": "Es existiert kein User unter der angegebenen Email Adresse",
+    "wrongPassword": "falsches Passwort",
+
+    "resetPasswordTitle": "Passwort zurücksetzen",
+    "resetPasswordMail": "Wir haben ihnen eine Email zum zurücksetzen ihres Passwortes gesendet",
+    "resetPassword": "Passwort zurücksetzen",
+
+    "register": "Registrieren",
+    "passwordMinHint": "mindestens 6 Zeichen lang",
+    "continue": "weiter",
+    "or": "Oder ",
+    "signIn": "Anmelden",
+    "emailInUse": "Die Email ist schon vergeben",
+    "weakPassword": "Das Passwort ist zu schwach",
+    "termsTitle": "AGB",
+    "privacyTitle": "Datenschutzerklärung",
+    "cancel": "abbrechen",
+    "back": "zurück",
+    "agree": "Zustimmen",
+    "agreeAndContinue": "Zustimmen & weiter",
+
+    "name": "Dein Name",
+    "enterName": "Gib einen Namen für dein Profil ein",
+    "type": "Schreib hier...",
+    "next": "weiter",
+
+    "birthdate": "Geburtsdatum",
+    "enterBirthdate": "Gib dein Geburtsdatum ein",
+    "over18": "Du musst mindestens 18 Jahre alt sein um die App zu benutzen",
+    "day": "Tag",
+    "month": "Monat",
+    "year": "Jahr",
+    "dateFormatError": "Das Datum ist nicht im korrekten Datums-Format",
+
+    "youAre": "Du bist...",
+    "chooseYourGender": "Wähl dein Geschlecht",
+    "female": "Weiblich",
+    "male": "Männlich",
+    "others": "Andere",
+
+    "yourIntrests": "Deine Interessen",
+    "chooseIntrests": "Wähle 3 bis 5 Interessen",
+    "choose3Intrests": "Wähle mindestens 3 Interessen",
+
+
+    "music": "Musik",
+    "sport": "Sport",
+    "fitness": "Fitness",
+    "jogging": "Joggen",
+    "cooking": "Kochen",
+    "baking": "Baken",
+    "videogames": "Videospiele",
+    "seriesAndMovies": "Serien und Filme",
+    "hiking": "Wandern",
+    "dancing": "Tanzen",
+    "photography": "Fotografie",
+    "technology": "Technologie",
+    "programming": "Programmieren",
+    "basketball": "Baketball",
+    "football": "Fußball",
+    "fashion": "Fashion",
+    "singing": "Singen",
+    "art": "Kunst",
+    "guitar": "Gitarre",
+    "instruments": "Instrumente",
+    "chess": "Schach",
+    "animations": "Animationen",
+    "fishing": "Fischen",
+    "martialArts": "Kampfsport",
+    "reading": "Lesen",
+    "writing": "Schreiben",
+    "drawing": "Malen",
+    "travel": "Traveln",
+    "astrologicalSigns": "Sternzeichen",
+    "yoga": "Yoga",
+    "meditation": "Meditation",
+    "vegan": "Vegan",
+    "vegetarian": "Vegetarisch",
+    "alcohol": "Alkohol",
+    "politics": "Politik",
+    "feminism": "Feminismus",
+    "lgbtq+": "LGBTQ+",
+    "environmentalism": "Umweltaktivismus",
+    "golf": "Golf",
+    "skiSnowboard": "Ski und Snowboard",
+    "skating": "Skaten",
+    "dogs": "Hunde",
+    "cats": "Katzen",
+    "gardening": "Gärtnerei",
+    "penPaper": "Pen & Paper",
+    "boardGames": "Brettspiele",
+    "cycling": "Fahrrad",
+    "climbing": "Klettern",
+    "craftsmanship": "Handwerkskunst",
+    "collections": "Sammeln",
+    "extremeSports": "Extremsportarten",
+
+    "profilePicture": "Profil Bild",
+    "clickImage": "Klick auf das Zeichen um ein Profil Bild auszusuchen",
+    "picture": "Bild",
+    "completeRegistration": "Registrierung abschließen",
+    "takeImage": "Bild aufnehmen",
+    "chooseGallery": "Aus der Gallery wählen",
+
+    "editProfile": "Profil bearbeiten",
+    "logout": "ausloggen",
+    "deleteAccount": "Account löschen",
+    "changePicture": "Profilbild ändern",
+    "changeName": "Name ändern",
+    "changeIntrests": "Interessen ändern",
+    "save": "speichern",
+    "sure?": "Bist du sicher?",
+    "dontGo": "Da draußen sind viel Leute die mit dir Reden wollen!",
+    "yesDelete": "Ja, lösch meinen Account",
+    "goBack": "Nein, geh zurück",
+
+    "FAQ": "FAQ",
+    "anyQuestions": "Falls du Probleme, Fragen oder Feedback hast, schick uns eine Mail an:",
+    "whatIsShufflechatQuestion": "Was ist Shuffle Chat?",
+    "whatIsShufflechatAnswer": "Shufflechat ist eine App mit der du neue Leute kennen lernen kannst oder mit Leuten die du noch nicht kennst die Möglichkeit hast zu chatten.",
+    "shuffleChatWorldWideQuestion": "Kann ich Shufflechat überall in der Welt benutzen?",
+    "shuffleChatWorldWideAnswer": "Ja solange du Internet hast, kannst du Shufflechat von wo du willst benutzten. Momentan gibt es Shufflechat in 2 Sprachen, aber weitere kommen noch hinzu.",
+    "shuffleChatNewsQuestion": "Wo kann ich über Neuigkeiten und zukünftige Updates von Shuffle Chat erfahren?",
+    "shuffleChatNewsAnswer": "Auf Instagram unter dem Account Shufflechat und bald auch auf der Shufflechat Webseite.",
+    "dataQuestion": "Welche Daten werden von mir gespeichert?",
+    "dataAnswer": "Nur die Daten die du bei deinem Account angegeben hast! Und diesen kannst du jederzeit löschen.",
+    "dataThirdPartyQuestion": "Werden meine Daten an dritte weitergegeben?",
+    "dataThirdPartyAnswer": "Nein. Shufflechat gibt deine Daten an niemanden weiter.",
+    "dataDeleteQuestion": "Wie kann ich meine Daten löschen lassen?",
+    "dataDeleteAnswer": "Auf dem großen roten Knopf auf deiner Profil Seite.",
+    "freeQuestion": "Ist Shuffle Chat kostenlos?",
+    "freeAnswer": "Ja, die Hauptfunktion ist komplett kostenlos, du kannst mit so vielen Leuten chatten wie du willst ohne einen Cent auszugeben. Nur die Premiumfunktion kosten was.",
+    "premiumQuestion": "Was beinhaltet das Premium Abo?",
+    "premiumAnswer": "Das Premiumabo beinhaltet momentan 3 Filter (Alter, Geschlecht und Intressen) und weitere Filter werden dazu kommen, wie z.B. der Filter, \"Region\". Damit kannst du mit Leuten aus deinem Wunschland reden und schonmal deren Sprache und Kultur kennenlernen.",
+    "cancelQuestion": "Wie kann ich mein Abo kündigen?",
+    "cancelAnswer": "Dein Abo kannst du jederzeit kündigen. \n\nIOS:\nÖffne die Einstellungen-App.\nTippe auf deinen Namen.\nTippe auf \"Abonnements\".\nTippe auf das Abonnement, das du verwalten möchtest\nTippe auf \"Abo kündigen\". Wenn du \"Abo kündigen\" nicht siehst, wurde das Abonnement bereits gekündigt und wird nicht verlängert.\n\nAndroid:\nÖffnen Sie auf Ihrem Smartphone oder Tablet den Google Play Store .\nPrüfen Sie, ob Sie im richtigen Google-Konto angemeldet sind.\nTippen Sie auf das Dreistrich-Menü Abos.\nWählen Sie das Abo aus, das Sie kündigen möchten.\nTippen Sie auf Abo kündigen.\n",
+    "moneyBackQuestion": "Ich bin unzufrieden, wie kriege ich mein Geld zurück?",
+    "moneyBackAnswer": "Schreib eine Email an support@shufflechat.com, mit passendem Betreff und dem Grund warum du den Kauf stornieren willst. Wir werden dann auf dich zuück kommen.",
+    "newUpdatesQuestion": "Kommen noch neue Features für diese App?",
+    "newUpdatesAnswer": "Ja jede Menge sind geplant, falls du Ideen hast gerne an die oben angegebene Email schicken.",
+    "photoQuestion": "Was sollte ich bei meinem Foto beachten?",
+    "photoAnswer": "Das Foto muss den Nutzungsrichtlinien entsprechen.\nAccounts mit sexuellen, rassistischen oder Hass-erfüllten Bild oder Namen werden gesperrt.",
+    "userQuestion": "Wer darf alles Shufflechat benutzen?",
+    "userAnswer": "Jeder der über 18 Jahre alt ist",
+    "technicalQuestion": "Was soll ich tun wenn ich technische Probleme mit der App habe?",
+    "technicalAnswer": "An die oben angebene Email eine Nachicht mit dem passenden Betreff schicken schicken.\nIn der Nachricht beschreiben was das Problem ist und welches Gerät du benutzt (z.B. \"Iphone 11\")."    
+
+
 
 }
