--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -53,6 +53,7 @@
 
     "yourIntrests": "Deine Interessen",
     "chooseIntrests": "Wähle 3 bis 5 Interessen",
+    "scroll": "Scrolle um mehr zu sehen...",
     "choose3Intrests": "Wähle mindestens 3 Interessen",
 
 
