--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -53,6 +53,7 @@
 
     "yourIntrests": "Your Intrests",
     "chooseIntrests": "Choose 3 to 5 Intrests",
+    "scroll": "Scroll to see more...",
     "choose3Intrests": "Choose at least 3 Intrests",
 
 
