chatScreen + Matching fixes

--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -169,5 +169,9 @@
 
     "clear": "entfernen",
     "edit": "bearbeiten",
-    "chooseMax5": "Wähle bis zu 5 Interessen"
+    "chooseMax5": "Wähle bis zu 5 Interessen",
+    "clickHereForMore": "Hier klicken um mehr zu sehen",
+    "userWriting": "schreibt..."
+
+
 }
