--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -170,7 +170,10 @@
 
     "clear": "clear",
     "edit": "edit",
-    "chooseMax5": "Choose up to 5 intrests"
+    "chooseMax5": "Choose up to 5 intrests",
+    "clickHereForMore": "Click here to see more",
+    "userWriting": "writing..."
+
 
 
 
